--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -419,6 +419,7 @@ ul{
           text-align: center;
           display: block;
           border-radius: 5px;
+          font-size: 18px;
           &:hover{
             background-color: #f90;
           }
