--- a/static/css/base.css
+++ b/static/css/base.css
@@ -155,7 +155,7 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .leftContent .classBox .firstClass .classList .classItem.active::after { content: ">"; position: absolute; right: 10px; line-height: 56px; }
 
-.leftContent .classBox .firstClass .classList .newClass { height: 50px; line-height: 50px; width: 90%; margin: 10px auto; color: #fff; background-color: #f60; text-align: center; display: block; border-radius: 5px; }
+.leftContent .classBox .firstClass .classList .newClass { height: 50px; line-height: 50px; width: 90%; margin: 10px auto; color: #fff; background-color: #f60; text-align: center; display: block; border-radius: 5px; font-size: 18px; }
 
 .leftContent .classBox .firstClass .classList .newClass:hover { background-color: #f90; }
 
@@ -523,6 +523,8 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 .goodsList .g_item .name { padding: 0px 10px; line-height: 1.5; font-size: 12px; color: #666; }
 
 .goodsList .g_item .com_add { font-size: 12px; padding: 0px 10px; color: #999; }
+
+.goodsList .g_item:hover { border-color: #f60; -webkit-box-shadow: 0 5px 5px rgba(100, 100, 100, 0.5); box-shadow: 0 5px 5px rgba(100, 100, 100, 0.5); }
 
 .siteTips { border: 1px solid #eee; border-color: #f60; margin: 10px auto; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 10px; color: #999; }
 
