--- a/view/标准选择_具体产品对应的供应商列表.html
+++ b/view/标准选择_具体产品对应的供应商列表.html
@@ -112,16 +112,25 @@
                 <div class="firstClass">
                     <div class="flag">选择大类</div>
                     <ul class="classList">
-                        <li><a href="" class="classItem active"><img src="../static/images/index/lei_1.png">螺丝</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_2.png">垫片</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_3.png">螺钉</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_4.png">螺栓</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_5.png">柳钉</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_6.png">销</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_7.png">接头</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_8.png">O型圈</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_9.png">卡环</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_10.png">卡箍</a></li>
+                        <li><a href="" class="classItem active"><img src="../static/images/index/lei_1.png"><img src="../static/images/index/lei_1.png">螺丝</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_2.png"><img
+                                src="../static/images/index/lei_2.png">垫片</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_3.png"><img
+                                src="../static/images/index/lei_3.png">螺钉</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_4.png"><img
+                                src="../static/images/index/lei_4.png">螺栓</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_5.png"><img
+                                src="../static/images/index/lei_5.png">柳钉</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_6.png"><img
+                                src="../static/images/index/lei_5.png">销</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_7.png"><img
+                                src="../static/images/index/lei_7.png">接头</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_8.png"><img
+                                src="../static/images/index/lei_8.png">O型圈</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_9.png"><img
+                                src="../static/images/index/lei_9.png">卡环</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_10.png"><img
+                                src="../static/images/index/lei_10.png">卡箍</a></li>
                         <li><a href="" class="newClass">我有新的品类入驻</a></li>
                     </ul>
                 </div>
