--- a/view/index.html
+++ b/view/index.html
@@ -52,7 +52,7 @@
                         <option value="1">JIS2</option>
                     </select>
                     <input type="text" class="searchCondition" value="JIS-001">
-                    <button type="submit" class="searchBtn"><i class="iconfont icon-search"></i></button>
+                    <input type="submit" class="searchBtn" value="搜索" style="width: 60px;">
                 </form>
             </div>
             <div class="buySaller">
@@ -112,25 +112,48 @@
                 <div class="firstClass">
                     <div class="flag">选择大类</div>
                     <ul class="classList">
-                        <li><a href="" class="classItem active"><img src="../static/images/index/lei_1.png"><img src="../static/images/index/lei_1.png">螺丝</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_2.png"><img
-                                src="../static/images/index/lei_2.png">垫片</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_3.png"><img
-                                src="../static/images/index/lei_3.png">螺钉</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_4.png"><img
-                                src="../static/images/index/lei_4.png">螺栓</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_5.png"><img
-                                src="../static/images/index/lei_5.png">柳钉</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_6.png"><img
-                                src="../static/images/index/lei_5.png">销</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_7.png"><img
-                                src="../static/images/index/lei_7.png">接头</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_8.png"><img
-                                src="../static/images/index/lei_8.png">O型圈</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_9.png"><img
-                                src="../static/images/index/lei_9.png">卡环</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_10.png"><img
-                                src="../static/images/index/lei_10.png">卡箍</a></li>
+                        <li>
+                            <a href="" class="classItem active">
+                                <span class="ci_img">
+                                    <img src="../static/images/index/lei_1.png">
+                                </span>
+                                螺丝
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="classItem">
+                            <span class="ci_img">
+                                <img src="../static/images/index/lei_2.png">
+                            </span>
+                            垫片
+                            </a>
+                        </li>
+                        <li><a href="" class="classItem">
+                            <span class="ci_img">
+                                <img src="../static/images/index/lei_3.png">
+                            </span>
+                            螺钉</a></li>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_4.png">
+                            </span>螺栓</a></li>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_5.png">
+                            </span>柳钉</a></li>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_6.png">
+                            </span>销</a></li>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_7.png">
+                            </span>接头</a></li>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_8.png">
+                            </span>O型圈</a></li>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_9.png">
+                            </span>卡环</a></li>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_10.png">
+                            </span>卡箍</a></li>
                         <li><a href="" class="newClass">我有新的品类入驻</a></li>
                     </ul>
                 </div>
@@ -383,96 +406,96 @@
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
-                        <span class="count">产品数量：<em>117877</em></span>
-                        <span class="address">齐齐哈尔</span>
+                        <span class="count">产品数量：<em>999</em></span>
+                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
                     </p>
                 </a>
             </div>
