--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -665,7 +665,7 @@ ul{
     font-size: 20px;
   }
   .sellerList{
-    height: 942px;
+    //height: 942px;
     .sellerItem{
       width: 180px;
       margin:6px 5px;
