--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -705,6 +705,8 @@ ul{
             }
           }
           &.address{
+            width: 91px;
+            text-align: center;
             float: right;
           }
         }
