--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -392,8 +392,9 @@ ul{
           border-bottom: 1px solid #eee;
           color: #666;
           position: relative;
+          text-align: center;
           .ci_img{
-            width: 100px;
+            //width: 100px;
             text-align: center;
             height: 50px;
             display: inline-block;
