--- a/view/index.html
+++ b/view/index.html
@@ -455,7 +455,7 @@
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>999</em></span>
-                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
+                        <span class="address">江苏&nbsp;&nbsp;无锡</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
@@ -463,7 +463,7 @@
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>999</em></span>
-                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
+                        <span class="address">河北&nbsp;&nbsp;邯郸</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
@@ -471,7 +471,7 @@
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>999</em></span>
-                        <span class="address">黑龙江&nbsp;&nbsp;齐齐哈尔</span>
+                        <span class="address">上海</span>
                     </p>
                 </a>
                 <a href ="" class="sellerItem">
