--- a/static/css/base.css
+++ b/static/css/base.css
@@ -147,9 +147,9 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .leftContent .classBox .firstClass .classList li:hover .innerChooseBox { display: block; }
 
-.leftContent .classBox .firstClass .classList .classItem { display: block; height: 56px; line-height: 56px; padding-left: 5px; font-size: 16px; border-bottom: 1px solid #eee; color: #666; position: relative; }
+.leftContent .classBox .firstClass .classList .classItem { display: block; height: 56px; line-height: 56px; padding-left: 5px; font-size: 16px; border-bottom: 1px solid #eee; color: #666; position: relative; text-align: center; }
 
-.leftContent .classBox .firstClass .classList .classItem .ci_img { width: 100px; text-align: center; height: 50px; display: inline-block; margin-top: 3px; margin-right: 10px; }
+.leftContent .classBox .firstClass .classList .classItem .ci_img { text-align: center; height: 50px; display: inline-block; margin-top: 3px; margin-right: 10px; }
 
 .leftContent .classBox .firstClass .classList .classItem .ci_img img { vertical-align: top; height: 50px; max-width: 100px; }
 
