--- a/view/标准选择_促销和免费送样.html
+++ b/view/标准选择_促销和免费送样.html
@@ -112,7 +112,9 @@
                 <div class="firstClass">
                     <div class="flag">选择大类</div>
                     <ul class="classList">
-                        <li><a href="" class="classItem active"><img src="../static/images/index/lei_1.png"><img src="../static/images/index/lei_1.png">螺丝
+                        <li><a href="" class="classItem active"><span class="ci_img">
+                                <img src="../static/images/index/lei_1.png">
+                            </span>螺丝
                         </a>
                             <!-- 左侧滑动打开 start -->
                             <div class="secondClass innerChooseBox" style="display: ">
@@ -223,8 +225,9 @@
                             </div>
                             <!-- 左侧滑动打开 end -->
                         </li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_2.png"><img
-                                src="../static/images/index/lei_2.png">垫片</a>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_2.png">
+                            </span>垫片</a>
                             <!-- 左侧滑动打开 start -->
                             <div class="secondClass innerChooseBox" style="display: ">
                                 <div class="clearAll">
@@ -334,8 +337,9 @@
                             </div>
                             <!-- 左侧滑动打开 end -->
                         </li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_3.png"><img
-                                src="../static/images/index/lei_3.png">螺钉</a>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_3.png">
+                            </span>螺钉</a>
                             <!-- 左侧滑动打开 start -->
                             <div class="secondClass innerChooseBox" style="display: ">
                                 <div class="clearAll">
@@ -445,8 +449,9 @@
                             </div>
                             <!-- 左侧滑动打开 end -->
                         </li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_4.png"><img
-                                src="../static/images/index/lei_4.png">螺栓</a>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_4.png">
+                            </span>螺栓</a>
                             <!-- 左侧滑动打开 start -->
                             <div class="secondClass innerChooseBox" style="display: ">
                                 <div class="clearAll">
@@ -556,8 +561,9 @@
                             </div>
                             <!-- 左侧滑动打开 end -->
                         </li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_5.png"><img
-                                src="../static/images/index/lei_5.png">柳钉</a>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_5.png">
+                            </span>柳钉</a>
                             <!-- 左侧滑动打开 start -->
                             <div class="secondClass innerChooseBox" style="display: ">
                                 <div class="clearAll">
@@ -667,8 +673,9 @@
                             </div>
                             <!-- 左侧滑动打开 end -->
                         </li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_6.png"><img
-                                src="../static/images/index/lei_5.png">销</a>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_6.png">
+                            </span>销</a>
                             <!-- 左侧滑动打开 start -->
                             <div class="secondClass innerChooseBox" style="display: ">
                                 <div class="clearAll">
@@ -778,8 +785,9 @@
                             </div>
                             <!-- 左侧滑动打开 end -->
                         </li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_7.png"><img
-                                src="../static/images/index/lei_7.png">接头</a>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_7.png">
+                            </span>接头</a>
                             <!-- 左侧滑动打开 start -->
                             <div class="secondClass innerChooseBox" style="display: ">
                                 <div class="clearAll">
@@ -889,8 +897,9 @@
                             </div>
                             <!-- 左侧滑动打开 end -->
                         </li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_8.png"><img
-                                src="../static/images/index/lei_8.png">O型圈</a>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_8.png">
+                            </span>O型圈</a>
                             <!-- 左侧滑动打开 start -->
                             <div class="secondClass innerChooseBox" style="display: ">
                                 <div class="clearAll">
@@ -1000,8 +1009,9 @@
                             </div>
                             <!-- 左侧滑动打开 end -->
                         </li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_9.png"><img
-                                src="../static/images/index/lei_9.png">卡环</a>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_9.png">
+                            </span>卡环</a>
                             <!-- 左侧滑动打开 start -->
                             <div class="secondClass innerChooseBox" style="display: ">
                                 <div class="clearAll">
@@ -1111,8 +1121,9 @@
                             </div>
                             <!-- 左侧滑动打开 end -->
                         </li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_10.png"><img
-                                src="../static/images/index/lei_10.png">卡箍</a>
+                        <li><a href="" class="classItem"><span class="ci_img">
+                                <img src="../static/images/index/lei_10.png">
+                            </span>卡箍</a>
                             <!-- 左侧滑动打开 start -->
                             <div class="secondClass innerChooseBox" style="display: ">
                                 <div class="clearAll">
